fix mobile header burger alignement

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -53,6 +53,7 @@
   margin: 0 auto;
   padding: 0 3rem;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
 }
